# geniza

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  THOUGHTS  TODO
diy-dat/src/: SUMMARY.md  book.toml  drive.md  intro.md  network.md  sleep.md
notes/: architecture.md  bugs.txt  crypto.txt  dat-spec-thoughts.md  drive.md  network.md  new_apis.md  process.md  refs.md  register.md  sleep.md  spec_todo.txt  typos.txt  upstream_behavior.txt
notes/crypto/: ipython_log.py  notes.txt
src/: bitfield.rs  blah  discovery.rs  drive.rs  helpers.rs  lib.rs  metadata_msg.proto  metadata_msg.rs  metadata_msgs.proto  metadata_msgs.rs  network_msgs.proto  network_msgs.rs  node.rs  peer.rs  protocol.rs  register.rs  sleep.rs  sleep_file.rs  sleep_register.rs  sync.rs  synchronizer.rs
test-data/dat/: README.md
test-data/dat/alphabet/.dat/: content.key  content.secret_key  content.signatures  content.tree  metadata.data  metadata.key  metadata.secret_key  metadata.signatures  metadata.tree
test-data/dat/removal/: README.md  final.txt
test-data/dat/removal/.dat/: content.bitfield  content.key  content.secret_key  content.signatures  content.tree  metadata.data  metadata.key  metadata.signatures  metadata.tree
test-data/dat/simple/: README.md
test-data/dat/simple/.dat/: content.bitfield  content.key  content.secret_key  content.signatures  content.tree  metadata.data  metadata.key  metadata.secret_key  metadata.signatures  metadata.tree
test-data/dat/tree/: README.md  datapackage.json
test-data/sleep/empty/: empty.hexdump  empty.py  empty.sleep
(+15 files in other folders)
