[package]
name = "geniza"
version = "0.1.0"
authors = ["Bryan Newbold <bnewbold@robocracy.org>"]

[dependencies]
rust-crypto = "^0.2"
integer-encoding = "^1.0"
clap = "2"
error-chain = "0.7"
env_logger = "0.3"
rand = "0.3"
protobuf = "1.3"
log = "0.3"
sodiumoxide = "0.0.16"

[dev-dependencies]
tempdir = "0.3"

[patch.crates-io]
sodiumoxide = { git = 'https://github.com/bnewbold/sodiumoxide-patched', branch = 'stream_xor_ic' }
