[package]
name = "geniza"
version = "0.1.0"
authors = ["Bryan Newbold <bnewbold@robocracy.org>"]
license = "GPL-3.0"

[dependencies]
rust-crypto = "^0.2"
integer-encoding = "^1.0"
clap = "2"
error-chain = "0.7"
env_logger = "0.3"
rand = "0.3"
protobuf = "1.3"
log = "0.3"
sodiumoxide = "0.0.16"
bit_field = "0.9"
resolve = "0.1.2"
data-encoding = "2.0"

[dev-dependencies]
tempdir = "0.3"
assert_cli = "0.5"
